--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
