--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^6.14.2",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
+    "mongoose-unique-validator": "^3.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
